RESOLVED FIXED276176
[Navigation] Throw exceptions when unloading
https://bugs.webkit.org/show_bug.cgi?id=276176
Summary [Navigation] Throw exceptions when unloading
Rob Buis
Reported 2024-07-03 09:30:48 PDT
Throw exceptions when unloading.
Attachments
Rob Buis
Comment 1 2024-07-03 10:01:58 PDT
Radar WebKit Bug Importer
Comment 2 2024-07-10 09:31:19 PDT
EWS
Comment 3 2024-07-12 01:53:38 PDT
Committed 280898@main (3209febcce78): <https://commits.webkit.org/280898@main> Reviewed commits have been landed. Closing PR #30443 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.